# mission_ws

./: README.md
src/aruco_detector/: package.xml  setup.py
src/aruco_detector/aruco_detector/: aruco_detect_image.py
src/img_capture/: package.xml  setup.cfg  setup.py
src/img_capture/img_capture/: go2_capture_once.py  img_capture_service.py
src/img_capture/launch/: img_capture.launch.py
