<?xml version="1.0"?>
<package format="3">
  <name>aruco_detector</name>
  <version>0.0.0</version>
  <description>OpenCV ArUco marker detector for saved images</description>

  <maintainer email="khg950520@gmail.com">baram</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
