<?xml version="1.0"?>
<package format="3">
  <name>img_capture</name>
  <version>0.0.0</version>
  <description>Go2 image capture service using separated Unitree Python SDK process</description>

  <maintainer email="khg950520@gmail.com">baram</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
